--- a/portable_application/configvaluesFabric.ini
+++ b/portable_application/configvaluesFabric.ini
@@ -5,7 +5,12 @@ url = http://localhost:6865
 template_data = SmartCity.Setup
 
 [images_template]
-template_images = SmartCity.Images
+template_images = SmartCity.Image
+
+[Stations]
+station1 = OakStreetWeatherStation
+station2 = FosterWeatherStation
+station3 = 63rdStreetWeatherStation
 
 [DAML_observer]
 observer = Operator
