--- a/DAML_Oracles/configvaluesSawtooth.ini
+++ b/DAML_Oracles/configvaluesSawtooth.ini
@@ -5,7 +5,7 @@ url = http://localhost:9000
 template_data = SmartCity.Data
 
 [images_template]
-template_images = SmartCity.Images
+template_images = SmartCity.Image
 
 [DAML_signatory]
 signatory = Operator
